# car-iceberg-postgres-pipeline

./: .gitignore  README.md  build_lambda_zip.sh  config_dev.ini  pyproject.toml  requirements.txt  run_real.py  setup_tables.sql
scripts/: build_lambda_zip.sh
sql/: iceberg_car.sql  iceberg_car_details.sql  postgres_car_detail.sql
src/: config.py  create_iceberg_tables.py  domain.py  flattener.py  iceberg_writer.py  interfaces.py  main.py  postgres_writer.py  s3_reader.py
tests/: test_flattener.py  test_pipeline.py
