[tool.poetry]
name = "car-pipeline"
version = "0.1.0"
description = "Car ingestion pipeline with Postgres and Iceberg"
authors = ["Charish Bhimarasetty"]

packages = [
    { include = "*", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.12"

boto3 = "^1.34"

sqlalchemy = "^2.0"
psycopg2-binary = "^2.9"

pyiceberg = "^0.6"

configparser = "*"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
